src/objects/Conga_Merge_Batch_Download__c.object
<CustomObject>
    <fields>
        <fullName>Case_Created_Date__c</fullName>
        <label>Case Created Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <label>Contact Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>China P&amp;G</fullName>
                </value>
                <value>
                    <fullName>China Sykes</fullName>
                </value>
                <value>
                    <fullName>China TCI</fullName>
                </value>
                <value>
                    <fullName>Crisis NO Contact Center</fullName>
                </value>
                <value>
                    <fullName>DEW SY Wilhelmshaven</fullName>
                </value>
                <value>
                    <fullName>EGC P&amp;G Cairo</fullName>
                </value>
                <value>
                    <fullName>ESB A&amp;A Barcelona</fullName>
                </value>
                <value>
                    <fullName>GBE SY Edinburgh</fullName>
                </value>
                <value>
                    <fullName>GBG TP Gateshead</fullName>
                </value>
                <value>
                    <fullName>GBN P&amp;G Newcastle</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>ILT Consumer Service Israel</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>ITP SY Prato</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>PKK EN Karachi</fullName>
                </value>
                <value>
                    <fullName>PLW P&amp;G Warsaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Repubic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Batch_Printed__c</fullName>
        <label>Date Batch Printed</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Contains__c</fullName>
        <label>Description Contains</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AKD</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Batch_Down__c</fullName>
        <formula>Hyperlink( &quot;https://www.appextremes.com/apps/Conga/BatchDownload.aspx?sessionId=&quot; 
&amp; $Api.Session_ID 
&amp; &quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; &quot;&amp;ReportId=&quot; &amp; Merge_Cell_2__c 
&amp; &quot;&amp;MFTS=&quot; &amp; Master_Field_to_Set__c 
&amp; &quot;&amp;MFTSV=&quot; &amp; Master_Field_to_Set_Value__c 

, &quot;Launch Investigation Batch Down&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investigation Batch Down</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norweign</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launch_Conga_Batch_Download__c</fullName>
        <formula>Hyperlink( &quot;https://www.appextremes.com/apps/Conga/BatchDownload.aspx?sessionId=&quot; 
&amp; $Api.Session_ID 
&amp; &quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; &quot;&amp;ReportId=&quot; &amp;   Merge_Cell__c  
&amp; &quot;&amp;MFTS=&quot; &amp;  Master_Field_to_Set__c 
&amp; &quot;&amp;MFTSV=&quot; &amp;  Master_Field_to_Set_Value__c 

, &quot;Launch Conga Merge Batch Download&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Conga Batch Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Field_to_Set_Value__c</fullName>
        <label>Master Field to Set Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Field_to_Set__c</fullName>
        <label>Master Field to Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Cell_2__c</fullName>
        <formula>ReportId__c &amp; &quot;?pv0=&quot; &amp; 

CASE (Country__c, 
&quot;Japan&quot;, &quot;Japan&quot;, 
&quot;China&quot;, &quot;China&quot;, 
&quot;Australia&quot;, &quot;Australia&quot;, 
&quot;India&quot;, &quot;India&quot;, 
&quot;Indonesia&quot;, &quot;Indonesia&quot;, 
&quot;Japan&quot;, &quot;Japan&quot;, 
&quot;Korea&quot;, &quot;Korea&quot;, 
&quot;Malaysia&quot;, &quot;Malaysia&quot;, 
&quot;New Zealand&quot;, &quot;New Zealand&quot;, 
&quot;Philippines&quot;, &quot;Philippines&quot;, 
&quot;Singapore&quot;, &quot;Singapore&quot;, 
&quot;Thailand&quot;, &quot;Thailand&quot;, 
&quot;Vietnam&quot;, &quot;Vietnam&quot;, 
&quot;Australia&quot;, &quot;Australia&quot;, 
&quot;Bahrain&quot;, &quot;Bahrain&quot;, 
&quot;Belarus&quot;, &quot;Belarus&quot;, 
&quot;Belgium&quot;, &quot;Belgium&quot;, 
&quot;Croatia&quot;, &quot;Croatia&quot;, 
&quot;Czech Repubic&quot;, &quot;Czech Repubic&quot;, 
&quot;Denmark&quot;, &quot;Denmark&quot;, 
&quot;Egypt&quot;, &quot;Egypt&quot;, 
&quot;Finland&quot;, &quot;Finland&quot;, 
&quot;France&quot;, &quot;France&quot;, 
&quot;Germany&quot;, &quot;Germany&quot;, 
&quot;Greece&quot;, &quot;Greece&quot;, 
&quot;Hungary&quot;, &quot;Hungary&quot;, 
&quot;Ireland&quot;, &quot;Ireland&quot;, 
&quot;Italy&quot;, &quot;Italy&quot;, 
&quot;Korea&quot;, &quot;Korea&quot;, 
&quot;Kuwait&quot;, &quot;Kuwait&quot;, 
&quot;Malaysia&quot;, &quot;Malaysia&quot;, 
&quot;Netherlands&quot;, &quot;Netherlands&quot;, 
&quot;New Zealand&quot;, &quot;New Zealand&quot;, 
&quot;Norway&quot;, &quot;Norway&quot;, 
&quot;Oman&quot;, &quot;Oman&quot;, 
&quot;Poland&quot;, &quot;Poland&quot;, 
&quot;Portugal&quot;, &quot;Portugal&quot;, 
&quot;Qatar&quot;, &quot;Qatar&quot;, 
&quot;Russia&quot;, &quot;Russia&quot;, 
&quot;Saudi Arabia&quot;, &quot;Saudi Arabia&quot;, 
&quot;Singapore&quot;, &quot;Singapore&quot;, 
&quot;Slovakia&quot;, &quot;Slovakia&quot;, 
&quot;South Africa&quot;, &quot;South Africa&quot;, 
&quot;Spain&quot;, &quot;Spain&quot;, 
&quot;Sweden&quot;, &quot;Sweden&quot;, 
&quot;Switzerland&quot;, &quot;Switzerland&quot;, 
&quot;Turkey&quot;, &quot;Turkey&quot;, 
&quot;UAE&quot;, &quot;UAE&quot;, 
&quot;Ukraine&quot;, &quot;Ukraine&quot;, 
&quot;United Kingdom&quot;, &quot;United Kingdom&quot;, 
&quot;Yemen&quot;, &quot;Yemen&quot;,
&quot;Pakistan&quot;,&quot;Pakistan&quot;, 
&quot;&quot;) 
&amp; &quot;~pv1=&quot; &amp; Case_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Cell 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Cell__c</fullName>
        <formula>ReportId__c  &amp; &quot;?pv0=&quot; &amp;
TEXT(Country__c)
&amp; &quot;~pv1=&quot; &amp;  
SUBSTITUTE(TEXT(Contact_Center__c),&quot;&amp;&quot;,&quot;%26&quot;)
&amp; &quot;~pv3=&quot; &amp;   Date_Batch_Printed__c
&amp; &quot;~pv4=&quot; &amp;  
TEXT(Description_Contains__c )
&amp; &quot;~pv6=&quot; &amp;  Case_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Merge Batch Download</label>
    <listViews>
        <fullName>AA_countries</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>ReportId__c</columns>
        <columns>Launch_Conga_Batch_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand,Vietnam,Malaysia,Thailand,Indonesia,Singapore,Philippines</value>
        </filters>
        <label>AA countries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Created_Date__c</columns>
        <columns>ReportId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_Taiwan_Hong_Kong</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>ReportId__c</columns>
        <columns>Launch_Conga_Batch_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>China,Taiwan,Hong Kong</value>
        </filters>
        <label>China Taiwan Hong Kong</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>India</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Created_Date__c</columns>
        <columns>ReportId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>ReportId__c</columns>
        <columns>Launch_Conga_Batch_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korea</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>ReportId__c</columns>
        <columns>Launch_Conga_Batch_Download__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <label>Korea</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Conga Merge Batch Download Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Merge Batch Download</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>